--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: "1.0"
 services:
   react:
-    build: ./zapp
+    build: ./mania-test
     container_name: zania-ui
     ports:
       - '4200:4200'
